--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylint",
+  "name": "@sgh-capital/stylint",
   "version": "2.0.0",
   "description": "A linter for stylus",
   "author": "Ross Patton",
@@ -25,7 +25,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SimenB/stylint"
+    "url": "git@github.com:SGH-Capital/stylint.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "bugs": {
     "url": "https://github.com/SimenB/stylint/issues"
